--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>Piotr Dudkiewicz - Recruitment task</title>
-</head>
-<body>
-
-</body>
+    <link rel="stylesheet" href="dist/main.css" />
+  </head>
+  <body>
+    <main>
+      <card-item
+        title="Lorem Ipsum"
+        image="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg"
+        image-alt="Sunset over the beautiful sea."
+        desc="Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required."
+      ></card-item>
+    </main>
+    <script src="dist/all.js"></script>
+  </body>
+</html>
