--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         image-alt="Sunset over the beautiful sea."
         desc="Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required."
       ></card-item>
+      <div class="popup">
+        <div>
+          <div class="close" onclick="closePopup()"></div>
+          <h2>Alert!</h2>
+          <span>You have clicked X times to related button.</span>
+          <div class="buttonContainer">
+            <button class="reset" aria-label="Reset counter">Reset</button>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="dist/all.js"></script>
   </body>
